# twrpdtgen

./: .gitignore  README.md  TODO  deps.txt  pyproject.toml  start.py  start.sh  update_dependencies.py
extract/: cleanup.sh  repackimg.sh  unpackimg.sh
templates/: Android.mk.jinja2  AndroidProducts.mk.jinja2  BoardConfig.mk.jinja2  commit_message.jinja2  device.mk.jinja2  omni.mk.jinja2  vendorsetup.sh.jinja2
tools/: adb.sh  files.sh  fstab.sh  graphics.sh  messages.sh  user_interaction.sh
twrpdtgen/: __init__.py  __main__.py  aik_manager.py  device_tree.py  devicetree.py  main.py  misc.py  twrp_dt_gen.py  twrpdtgen.py
twrpdtgen/buildprop_reader/: buildprop_reader.py
twrpdtgen/info_extractors/: buildprop.py  recovery_image.py
twrpdtgen/info_readers/: buildprop_reader.py
twrpdtgen/templates/: Android.bp.jinja2  Android.mk.jinja2  AndroidProducts.mk.jinja2  BoardConfig.mk.jinja2  LICENSE  LICENSE.jinja2  README.md.jinja2  __init__.py  commit_message.jinja2  device.mk.jinja2  extract-files.sh.jinja2  omni.mk.jinja2  omni_device.mk.jinja2  setup-makefiles.sh.jinja2  twrp_device.mk.jinja2  vendorsetup.sh.jinja2
twrpdtgen/utils/: aik_manager.py  aikmanager.py  build_prop.py  buildprop.py  constants.py  device_info.py  device_tree.py  deviceinfo.py  find_package.py  fstab.py  huawei.py  kernel.py  logging.py  template.py
