[tool.poetry]
name = "twrpdtgen"
version = "2.1.0"
description = "A Python library/script to automatically generate TWRP-compatible device tree from a boot/recovery image"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/twrpdtgen/twrpdtgen"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.14"
Jinja2 = "^3.0.0a1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
