[tool.poetry]
name = "twrpdtgen"
version = "3.0.0"
description = "A Python library/script to automatically generate TWRP-compatible device tree from a boot/recovery image"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/twrpdtgen/twrpdtgen"

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.27"
Jinja2 = "^3.1.1"
sebaubuntu-libs = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
